--- a/README
+++ b/README
@@ -3,5 +3,8 @@ Word Co-occurence Stats
 Given a word, what other words are statistically associated with it? 
 If I say 'love', or 'death', or 'terrorism', what other words and concepts go with it?
 
-Use hadoop framework to calculate the co-occurence rate among words.
-Sample results are in /results.
+Use hadoop framework to calculate the co-occurence rate among words
+Sameple input billofrights.txt
+Sample results are in /results/
+
+Wordcount.java Count the how many times a word appears using hadoop
